# scope-td-test

./: README.md  pyproject.toml
src/scope_td_test/: __init__.py  pipeline.py  schema.py
